--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,9 @@
 <footer>
-  <p>Copyright &copy; 2022 Gourav Khunger</p>
-  <p>This website is <a href="https://github.com/gouravkhunger/portfolio" target="_blank">open source</a></p>
+  <!-- <p>Copyright &copy; Gaspar Espuña Ribas</p>
+  <p>
+    This website is
+    <a href="https://github.com/gouravkhunger/portfolio" target="_blank"
+      >open source</a
+    >
+  </p> -->
 </footer>
