--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,20 +16,18 @@
 
     <meta property="og:title" content="{{ page.title }}" />
 
-    {% if page.preview %}
-      {% assign image = page.preview %}
-    {% elsif page.youtube %}
-      {% assign image = "https://img.youtube.com/vi/" | append: page.youtube | append: "/maxresdefault.jpg" %}
-    {% elsif page.github %}
-      {% assign image = page.github | prepend: "https://opengraph.githubassets.com/$/" | hashsert %}
-    {% else %}
-      {% assign image = site.url | append: "/assets/images/social-cover.png" %}
-    {% endif %}
+    {% if page.preview %} {% assign image = page.preview %} {% elsif
+    page.youtube %} {% assign image = "https://img.youtube.com/vi/" | append:
+    page.youtube | append: "/maxresdefault.jpg" %} {% elsif page.github %} {%
+    assign image = page.github | prepend:
+    "https://opengraph.githubassets.com/$/" | hashsert %} {% else %} {% assign
+    image = site.url | append: "/assets/images/social-cover.png" %} {% endif %}
     <meta property="og:image" content="{{ image }}" />
 
     <meta
       property="og:url"
-      content="{{ site.url }}{{ site.baseurl }}{{ page.url | replace: '/index.html', '' }}" />
+      content="{{ site.url }}{{ site.baseurl }}{{ page.url | replace: '/index.html', '' }}"
+    />
     <meta property="og:site_name" content="Gourav Khunger" />
 
     {% if page.url == '/' %}
@@ -37,8 +35,11 @@
     <meta property="profile:first_name" content="Gourav" />
     <meta property="profile:last_name" content="Khunger" />
     {% elsif page.youtube %}
-    <meta property="og:type" content="video">
-    <meta property="og:video" content="https://www.youtube.com/v/{{ page.youtube }}" />
+    <meta property="og:type" content="video" />
+    <meta
+      property="og:video"
+      content="https://www.youtube.com/v/{{ page.youtube }}"
+    />
     {% else %}
     <meta property="og:type" content="website" />
     {% endif %}
@@ -89,14 +90,14 @@
 
     <main>{{ content | extlinks }}</main>
 
-    {% include footer.html %}
-
-    {% if page.video_embed == true %}
+    {% include footer.html %} {% if page.video_embed == true %}
     <div id="modal">
       <iframe
         id="modal-iframe"
         class="w-5/6 lg:w-3/5 max-w-4xl aspect-video rounded-2xl"
-        allowfullscreen loading="lazy">
+        allowfullscreen
+        loading="lazy"
+      >
       </iframe>
     </div>
     {% endif %}
